Fixing spacing, part two.

--- a/styles/main.css
+++ b/styles/main.css
@@ -80,6 +80,7 @@ header .logo {
 header nav {
     position: absolute;
     right: 32px;
+    top: -4px;
 }
 /* FOOTER */
 
